# consecutive_success

./: README.md  consecutive_success.py  markov_chain_consecutive_success.py  pyproject.toml
tests/: test_MarkovChainConsecutiveSuccess.py
