[project]
name = "consecutive_success"
version = "0.1.0"
description = "Python package for modeling consecutive successes in a Markov chain, offering customizable parameters, probability predictions, and example generation. Ideal for exploring Markov chain concepts or statistical modeling, with contributions welcome."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 200